# tubestats

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  Procfile  README.MD  display.py  docker-compose.yaml  downloadYTdata.py  entrypoint.sh  functions.py  makefile  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.sh  tox.ini  youtube_presenter.py
.github/workflows/: main.yml
.streamlit/: config.toml
ansible/: ansible.cfg  deploy.yml  hosts
ansible/templates/: tubestats.shivan.xyz
data/: channel_data.pkl  video_data.pkl
src/tubestats/: __init__.py  api.py  data.py  main.py  parser.py
tests/: conftest.py  test_api.py  test_data.py  test_helpers.py  test_main.py  test_parser.py  test_settings.py  test_youtube_api.py  test_youtube_data.py  test_youtube_parser.py
tests/data/: channel_data.pkl  video_data.pkl
tubestats/: __init__.py  helpers.py  main.py  youtube_api.py  youtube_api_connect.py  youtube_data.py  youtube_parser.py
